fix navbar spacing

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -33,8 +33,8 @@
 }
 
 .navbar {
-  margin: 0;
-  padding-left: var(--zn-spacing-medium);
+  margin: 0 0 0 var(--zn-spacing-medium);
+  padding-left: 0;
 
   &--flush {
     padding: 0;
